Changed our names/roles

--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
                             <div class="member-icon">
                                 <i class="fas fa-music"></i>
                             </div>
-                            <h3>Sachin - Piano</h3>
+                            <h3>Sachin (Piano)</h3>
                             <p>Combining innovative techniques to combine the best of jazz, funk, neo-soul, hip-hop, and even classical</p>
                         </div>
                         <div class="member">
                             <div class="member-icon">
                                 <i class="fas fa-guitar"></i>
                             </div>
-                            <h3>Dylan - Bass</h3>
+                            <h3>Dylan (Bass)</h3>
                             <p>An expert at driving the rhythms of complex songs, while singing out deep melodies that intertwine with the piano and drums</p>
                         </div>
                         <div class="member">
                             <div class="member-icon">
                                 <i class="fas fa-drum"></i>
                             </div>
-                            <h3>Max - Drums</h3>
+                            <h3>Max (Drums)</h3>
                             <p>An unbelievably versatile drummer, able to seamlessly fuse Jazz and Neo-Soul with heavier styles like Drum and Bass and Hip-Hop</p>
                         </div>
                     </div>
