Add real audio functionality with m4a files
- Added audio/ directory with three m4a tracks
- Updated HTML to include audio elements for each track
- Replaced simulated audio with real HTML5 audio controls
- Real progress bars and duration display
- Audio files: paradise.m4a, in_bloom.m4a, hades_gift.m4a
- Updated README to reflect real audio functionality

--- a/index.html
+++ b/index.html
@@ -206,6 +206,20 @@
         </div>
     </footer>
 
+    <!-- Audio elements for the tracks -->
+    <audio id="audio-track-1" preload="metadata">
+        <source src="audio/paradise.m4a" type="audio/mp4">
+        Your browser does not support the audio element.
+    </audio>
+    <audio id="audio-track-2" preload="metadata">
+        <source src="audio/in_bloom.m4a" type="audio/mp4">
+        Your browser does not support the audio element.
+    </audio>
+    <audio id="audio-track-3" preload="metadata">
+        <source src="audio/hades_gift.m4a" type="audio/mp4">
+        Your browser does not support the audio element.
+    </audio>
+
     <script src="script.js"></script>
 </body>
 </html> 
