--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <div class="contact-details">
                             <div class="contact-item">
                                 <i class="fas fa-envelope"></i>
-                                <span>booking@ocelottrio.com</span>
+                                <span>sachchopra@gmail.com</span>
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-phone"></i>
