Changed some text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2 class="section-title">About Ocelot Trio</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>The Ocelot Trio brings together three passionate musicians united by their love for modern jazz. Our sound blends traditional jazz foundations with contemporary influences, creating a unique musical experience that captivates audiences.</p>
+                        <p>The Ocelot Trio brings together three passionate musicians united by their love for modern jazz. Our sound blends traditional jazz foundations with contemporary influences, creating a fun and unique musical experience that captivates audiences.</p>
                         <p>Our Trio was born in London in 2024, and has since been coming up with original tunes that reflect the distinct styles of each member. We hope our unique sound will makes waves in the UK Jazz scene and beyond.</p>
                     </div>
                         <div class="band-members">
