Add quick note functionality
- Added 'Send a Quick Note' section above contact
- Text area with placeholder 'I love your music!'
- Send button and Enter key support
- Opens email client with pre-filled message to sachchopra@gmail.com
- Added to navigation menu as 'Send Note'
- Responsive design with character limit (500 chars)
- Visual feedback and notifications

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#music">Music</a></li>
+                    <li><a href="#quick-note">Send Note</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="hamburger">
@@ -151,6 +152,26 @@
                                 <span class="duration">5:23</span>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="quick-note" class="quick-note">
+            <div class="container">
+                <h2 class="section-title">Send a Quick Note</h2>
+                <div class="quick-note-content">
+                    <p>Got something to say? Drop us a line!</p>
+                    <div class="note-form">
+                        <textarea 
+                            id="quick-message" 
+                            placeholder="I love your music!" 
+                            maxlength="500"
+                            rows="3"
+                        ></textarea>
+                        <button id="send-note-btn" class="send-note-btn">
+                            <i class="fas fa-paper-plane"></i> Send to the Ocelots
+                        </button>
                     </div>
                 </div>
             </div>
