Add name field to quick note form
- Added sender name input field (optional)
- Updated EmailJS template to use {{from_name}} properly
- Enhanced fallback messages to include sender name
- Visual feedback for both name and message fields
- Clear both fields after successful send
- Updated EmailJS setup guide with correct template
- Improved user experience with personalized messaging

--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
                 <div class="quick-note-content">
                     <p>Got something to say? Drop us a line!</p>
                     <div class="note-form">
+                        <input 
+                            type="text" 
+                            id="sender-name" 
+                            placeholder="Your name (optional)"
+                            maxlength="50"
+                        >
                         <textarea 
                             id="quick-message" 
                             placeholder="I love your music!" 
